gitignore and debug

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,16 @@ Builds/
 Tests/
 *.csproj
 *.sln
+rea_aug/ProjectSettings/DynamicsManager.asset
+rea_aug/ProjectSettings/Physics2DSettings.asset
+rea_aug/ProjectSettings/ProjectSettings.asset
+rea_aug/ProjectSettings/ProjectVersion.txt
+rea_aug/UnityPackageManager/manifest.json
+rea_aug/ProjectSettings/DynamicsManager.asset
+rea_aug/ProjectSettings/Physics2DSettings.asset
+rea_aug/ProjectSettings/ProjectSettings.asset
+rea_aug/ProjectSettings/ProjectVersion.txt
+rea_aug/ProjectSettings/DynamicsManager.asset
+rea_aug/ProjectSettings/Physics2DSettings.asset
+rea_aug/ProjectSettings/ProjectSettings.asset
+rea_aug/ProjectSettings/ProjectVersion.txt
